# home-assistant-roth-touchline

./: .gitignore  .pre-commit-config.yaml  README.md  SETUP.md  TESTER_README.md  configuration_sample.yaml  example_configuration.yaml  hacs.json  pyproject.toml  release-please-config.json  requirements-dev.txt  requirements.txt  setup.cfg  tester-requirements.txt  tester.py
.github/workflows/: ci.yml  hassfest.yml  pylint.yml  release.yml  semantic-pr.yml
custom_components/roth_touchline/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  hub.py  manifest.json  sensor.py  services.py  services.yaml  strings.json  xml_parser.py
scripts/: build_release_archive.py  semantic_release.py
tests/: conftest.py  test_config_flow.py  test_hub.py  test_init.py  test_release_archive.py  test_semantic_release.py  test_sensor.py  test_xml_parser.py
